--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-https://apption.co/embeds/8bba3e36
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Widget</title>
+  </head>
+  <body style="margin:0; padding:0;">
+    <iframe 
+      src="https://apption.co/embeds/8bba3e36" 
+      width="100%" 
+      height="600" 
+      style="border: none;"
+      allowfullscreen
+    ></iframe>
+  </body>
+</html>
